--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production MONGO_USER=tuyetanh1410202 MONGO_PASS=PDqQAHKRoaGJfjSk CLIENT_APP=https://post-app-frontend-express-session.onrender.com CLIENT_APP2=https://post-app-express-session.onrender.com SESSION_SECRET=mysecret nodemon app.js"
+    "start": "NODE_ENV=production MONGO_USER=tuyetanh1410202 MONGO_PASS=PDqQAHKRoaGJfjSk CLIENT_APP=https://post-app-frontend-express-session.onrender.com SESSION_SECRET=mysecret nodemon app.js"
   },
   "author": "",
   "license": "ISC",
